feat : 상품 등록 + 초기 재고/로그 생성 및 서비스/컨트롤러/테스트 추가